--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ Jinja2==2.11.1
 joblib==0.14.1
 MarkupSafe==1.1.1
 nltk==3.4.5
-numpy==1.21.2
-scikit-learn
+numpy==1.18.2
+scikit-learn==0.22.1
 scipy==1.7.1
 six==1.14.0
 textblob==0.15.3
-Werkzeug
+Werkzeug==1.0.1
